css edited intending to solve overflow issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,14 +1,20 @@
 /* General styles */
-body, html {
+/* * {
     margin: 0;
     padding: 0;
-    /* font-family: Raleway, sans-serif !important; */
-}
+} */
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+body{
+    background-color: #f0f0f0;
+}
 .container {    
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    align-items: center;
+    gap: 5;
+    flex-direction: row;
 }
 
 /* Header styles */
@@ -20,21 +26,17 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
 .header-logo {
     font-size: 24px;
 }
-
 .header-search {
     display: flex;
     align-items: center;
 }
-
 .header-search input[type="text"] {
     padding: 8px;
     margin-right: 8px;
 }
-
 .header-search button {
     padding: 8px 12px;
     background-color: #ccc;
@@ -43,22 +45,21 @@ header {
     color: #333;
     cursor: pointer;
 }
-
 .header-search button:hover {
     background-color: #ddd;
 }
 
 /* Sidebar styles */
 .sidebar {
+    width: 30%;
+    height: 70vh; 
     background-color: #f0f0f0;
     padding: 10px;
 }
-
 .nav-item {
     padding: 10px;
     text-align: center;
 }
-
 .nav-item a {
     display: block;
     background-color: #ccc;
@@ -72,12 +73,13 @@ header {
     color: #fff;
 }
 
-
 /* Content styles */
 .content {
-    flex: 1;
-    padding: 20px;
+    width: 70%;
+    min-height: 70vh;
     background-color: #fff;
+    padding: 5px;
+    /* flex: 1; */
 }
 
 h2{
@@ -86,34 +88,56 @@ h2{
 
 /* Table styles */
 .table-wrapper{
+    max-width: 100%;
     overflow-x:auto;
 }
-
 table {
-    width: 80vw;
+    width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 10px;
 }
-
 table th, table td {
     padding: 10px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
 }
-
 table th {
     background-color: #f0f0f0;
     font-weight: bold;
 }
-
+table td{
+    text-transform:uppercase;
+}
 table tr {
     background-color: #f9f9f9;
+    border-bottom: 1px solid #ccc;
 }
-
 table tr:hover {
     background-color: #f0f0f0;
 }
 
+hr{
+    margin: 20px 0 20px 0;
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.pagination-link{
+    margin: 20px;
+    padding: 10px;
+    background-color:#f0f0f0;
+    text-decoration: none;
+    color: #333;
+    border-radius: 8%;
+}
+
+.messages{
+    background-color: antiquewhite;
+    padding: 12px;
+}
 
 /* Responsiveness */
 @media only screen and (min-width: 600px) {
@@ -132,6 +156,38 @@ table tr:hover {
     }
 } 
 
+@media screen and (max-width: 768px) {
+    header{
+        width: 100vw;
+    }
+    .container {
+        display: block;
+        width: 100vw;
+        /* overflow-x:scroll; Check */
+    }
+
+    .sidebar {
+        height: auto;
+        overflow-x:auto;
+        display: flex;
+        align-items: center;
+        justify-content:space-between;
+        margin:0;
+        padding: 0;
+        width: 100%;
+        scrollbar-width: none;
+        background-color: #333;
+    }
+
+    .content {
+        width: 100%;
+    }
+    
+    .nav-item a{
+        width: 90px;
+    }
+}  
+
 
 @media only screen and (max-width: 600px) {
 header{
@@ -141,29 +197,7 @@ header{
     header a{
         margin-top: 20px;
     }
-}
-
-.pagination{
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.pagination-link{
-    margin: 20px;
-    padding: 10px;
-    background-color:#f0f0f0;
-    text-decoration: none;
-    color: #333;
-    border-radius: 8%;
-}
-
-
-.messages{
-    background-color: antiquewhite;
-    padding: 10px;
-}
- 
+} 
 
 /* Login styles */
 .login-body{
